# qreadable

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  dombuilder.cpp  dombuilder.h  domsupport.cpp  domsupport.h  gumbovisitor.cpp  gumbovisitor.h  jshelpers.h  main.cpp  parse.mjs  readability.qrc  readable-defs.h  readable.cpp  readable.h
test/: CMakeLists.txt  tst_domsupport.cpp  tst_domsupport_jscode.h
